Notes sur point non compris
Les //* c'est les points que je n'ai pas compris. Je te poserais mes question vis a vis de ces points si tu est chaud lors d'un petit reminder sur les socket (sera t'il possible de prendre 1h de ton temps ce week end?)

--- a/clientHex2_0.html
+++ b/clientHex2_0.html
@@ -43,7 +43,7 @@
             function entrerDansLaPartie(){
                 let nom = document.getElementById("nom").value;
                 console.log("Entré de "+ nom);
-                if(nom != "" && nom != " "){
+                if(nom != "" && nom != " "){                   //Pourquoi ce if?
                     console.log("   emission de "+ nom);
                     socket.emit('entree', nom);
                 }
@@ -51,8 +51,8 @@
             socket.on('entree', data =>{
                 numJoueur = data.numJoueur;
                 console.log("confirmation de l'entre de "+ numJoueur);
-                $("#btentree").toggle();
-                $("#listeJoueurs").text(data.nomsJoueurs);
+                $("#btentree").toggle();                       //*
+                $("#listeJoueurs").text(data.nomsJoueurs);     //*
             });
             socket.on('entreeAutreJoueur', data =>{
                 console.log("le serveur confirme l'entrée de "+ data.nomJoueur);
