css pas ouf ouf

--- a/clientHex2_0.html
+++ b/clientHex2_0.html
@@ -3,7 +3,16 @@
     <head>
         <style>
             #popup{
-                display: none;
+                /* display: none; */
+                text-align: center;
+                width: 45%;
+                height: 30%;
+                position: fixed;
+                top: 38%;
+                left: 30%;
+                background-color: crimson;
+                border: 3px solid #999999;
+                z-index: 9;
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
